...
      verticalAlignment = Alignment.CenterVertically) {
        Text(
            modifier = Modifier.fillMaxWidth().weight(1f).padding(horizontal = defaultPadding),
            text = "Vehicle Problems",
            style = MaterialTheme.typography.headlineSmall)
        IconButton(
            modifier = Modifier.padding(horizontal = defaultPadding).testTag("Add Problem Button"),
            onClick = { showAddProblemDialog = true }) {
              Icon(
                  modifier = Modifier,
                  imageVector = Icons.Default.Add,
                  contentDescription = "Add Problem")
            }
...
                text = "Problem",
                style = MaterialTheme.typography.headlineSmall)
            OutlinedTextField(
                modifier =
                    Modifier.fillMaxWidth()
                        .padding(horizontal = defaultPadding)
                        .testTag("Problem Field"),
                value = addNewProblem,
                onValueChange = { addNewProblem = it },
                isError = problemNotChosenError,
                supportingText = {
                  if (problemNotChosenError) Text("Please enter the problem of the vehicle")
                },
            )
          }
        },
        confirmButton = {
          Button(
              modifier = Modifier.testTag("Add Vehicle Problem Button"),
              onClick = {
                showAddProblemDialog = false
                problemNotChosenError = addNewProblem == ""
                vehicleNotChosenError = selectVehicle == null
                if (!hasError(problemNotChosenError, vehicleNotChosenError)) {
                  onConfirm(selectVehicle!!, addNewProblem)
...
 * @param defaultPadding The default padding value to be applied to the field.
 * @param pauseDuration The current pause duration.
 * @param setPauseDuration Callback function triggered when a new pause duration is entered.
 */
@Composable
fun PauseField(defaultPadding: Dp, pauseDuration: Long, setPauseDuration: (Long) -> Unit) {
  val title = "Pause duration"
  var showPausePicker by remember { mutableStateOf(false) }
  RangeTimePicker(
      padding = 16.dp,
      title = title,
      showDialog = showPausePicker,
      onDismiss = { showPausePicker = false },
...
